--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Jessica Hutchins | WDD 130 </title>
 </head>
+
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
+    <header></header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="wwr/">Rafting Website</a>
+    </nav>
+    </header>
+    <main>
+        <h1>Jessica Hutchins | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Jessica Hutchins">
+        <p>Hi Everyone! My name is Jessica Hutchins and I live in the River Valley area of
+            Arkansas. One of my favorite hobbies, as you can see, is learning how to safetly shoot guns. I especially
+            enjoy my
+            9mm pistol. My newest adventure is learning Web Design and Development online throught BYUI. I am
+            looking
+            forward to seeing what career opportunities I have once I complete my degree.</p>
+    </main>
+    <footer>
+        <p>&copy 2025 🍂 Jessica Hutchins 🍂 Arkansas USA</p>
+    </footer>
+    <h1></h1>
+    <p></p>
 
     <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
 </body>
+
 </html>
