End of week one revision 1

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <header></header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="wwr/">Rafting Website</a>
-    </nav>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
     </header>
     <main>
         <h1>Jessica Hutchins | WDD 130</h1>
@@ -25,12 +25,10 @@
             forward to seeing what career opportunities I have once I complete my degree.</p>
     </main>
     <footer>
-        <p>&copy 2025 🍂 Jessica Hutchins 🍂 Arkansas USA</p>
+        <p>&copy2025 🍂 Jessica Hutchins 🍂 Arkansas USA</p>
     </footer>
     <h1></h1>
     <p></p>
-
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
 </body>
 
 </html>
