End of week one revised

--- a/index.html
+++ b/index.html
@@ -16,19 +16,15 @@
     </header>
     <main>
         <h1>Jessica Hutchins | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Jessica Hutchins">
+        <img src="images/profile.jpg" alt="Jessica Hutchins" width="200">
         <p>Hi Everyone! My name is Jessica Hutchins and I live in the River Valley area of
             Arkansas. One of my favorite hobbies, as you can see, is learning how to safetly shoot guns. I especially
-            enjoy my
-            9mm pistol. My newest adventure is learning Web Design and Development online throught BYUI. I am
-            looking
-            forward to seeing what career opportunities I have once I complete my degree.</p>
+            enjoy my 9mm pistol. My newest adventure is learning Web Design and Development online throught BYUI. I am
+            looking forward to seeing what career opportunities I have once I complete my degree.</p>
     </main>
     <footer>
         <p>&copy2025 🍂 Jessica Hutchins 🍂 Arkansas USA</p>
     </footer>
-    <h1></h1>
-    <p></p>
 </body>
 
 </html>
