--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             looking forward to seeing what career opportunities I have once I complete my degree.</p>
     </main>
     <footer>
-        <p>&copy2025 🍂 Jessica Hutchins 🍂 Arkansas USA</p>
+        <p>©2025 🍂 Jessica Hutchins 🍂 Arkansas USA</p>
     </footer>
 </body>
 
