Week 2 basic structure

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Jessica Hutchins">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="Basic Logo">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="www.lds.org">LDS-church-site</a></li>
+            <li><a href="www.byupathway.com">BYU-Pathway</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, rem?</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio, porro.</p>
+        </section>
+    </main>
+    <aside>
+        <img scr="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/320x200/accra-ghana-temple-759298-wallpaper.jpg"
+            alt="Payson Utah Temple Celestial Room" width="200">
+    </aside>
+    <footer>
+        <p>Jessica Hutchins</p>
+    </footer>
 </body>
-</html>
+
+</html
