--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -15,8 +15,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="www.lds.org">LDS-church-site</a></li>
-            <li><a href="www.byupathway.com">BYU-Pathway</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/?lang=eng">LDS-church-site</a></li>
+            <li><a href="https://www.byupathway.edu/">BYU-Pathway</a></li>
         </ul>
     </nav>
     <main>
