--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -31,7 +31,7 @@
         </section>
     </main>
     <aside>
-        <img src="https://newsroom.churchofjesuschrist.org/media/960x540/Payson_Temple_Celestial_room2_2015_resized.jpg"
+        <img srcset="https://newsroom.churchofjesuschrist.org/media/960x540/Payson_Temple_Celestial_room2_2015_resized.jpg"
             alt="Payson Utah Temple Celestial Room" width="200">
     </aside>
     <footer>
