W2 Home Page Enchancement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jessica Hutchins | WDD 130 </title>
+    <meta name="description"
+        content="This is the website of Jessica Hutchins. This site is proof of the work I have put into learning HTML in my BYU Pathway WDD-130, Web Fundamentals.">
+    <meta name="author" content="Jessica Hutchins">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -23,6 +26,17 @@
             enjoy my 9mm pistol. My newest adventure is learning Web Design and Development online throught BYUI. I am
             looking forward to seeing what career opportunities I have once I complete my degree.</p>
     </main>
+    <aside>
+        <h2>Arkansas</h2>
+
+        <img src="images/AR_Flag.jpg" alt="Arkansas Flag">
+        <p>Here are some interesting facts about the great state of Arkansas. It is known as "The Natural State". It is
+            the only state in the United states that you can actually
+            visit to dig for your own diamonds. Arkansas is the proud producer of half of the rice grown in the United
+            States. Arkansas is also the birthplace of Walmart. Lastly, but not least, Arkansas has been named by U.S.
+            News and World Report to be the number
+            one most affordable state in the United States!" </p>
+    </aside>
     <footer>
         <p>©2025 🍂 Jessica Hutchins 🍂 Arkansas USA</p>
     </footer>
