--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <aside>
         <h2>Arkansas</h2>
 
-        <img src="images/AR_Flag.jpg" alt="Arkansas Flag">
+        <img src="images/ar-flag.jpg" alt="Arkansas Flag">
         <p>Here are some interesting facts about the great state of Arkansas. It is known as "The Natural State". It is
             the only state in the United states that you can actually
             visit to dig for your own diamonds. Arkansas is the proud producer of half of the rice grown in the United
