complete code along

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://www.linkedin.com/in/jessica-h-72b8711b8">Linkedin</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
@@ -25,17 +27,25 @@
             Arkansas. One of my favorite hobbies, as you can see, is learning how to safetly shoot guns. I especially
             enjoy my 9mm pistol. My newest adventure is learning Web Design and Development online throught BYUI. I am
             looking forward to seeing what career opportunities I have once I complete my degree.</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/bentonville-arkansas-temple?lang=eng"
+                    target="_blank">Bentonville Arkansas Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/kansas-city-missouri-temple?lang=eng"
+                    target="_blank">Kansas City Missouri Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/manti-utah-temple?lang=eng"
+                    target="_blank">Manti Utah Temple</a></li>
+        </ul>
     </main>
-    <aside>
+
+    <aside class="box">
         <h2>Arkansas</h2>
 
-        <img src="images/ar-flag.jpg" alt="Arkansas Flag">
-        <p>Here are some interesting facts about the great state of Arkansas. It is known as "The Natural State". It is
-            the only state in the United states that you can actually
-            visit to dig for your own diamonds. Arkansas is the proud producer of half of the rice grown in the United
-            States. Arkansas is also the birthplace of Walmart. Lastly, but not least, Arkansas has been named by U.S.
-            News and World Report to be the number
-            one most affordable state in the United States!" </p>
+        <img src="images/ozark-mountains-sunrise.jpg" alt="Ozark Mountins Sunrise">
+        <p>Above is an image of a sunrise over the beautiful ozark mountains here in Arkansas. It is known as "The
+            Natural State". It is the only state in the United states that you can actually
+            visit to dig for your own diamonds. Arkansas is the proud producer of half of the rice grown in
+            the United States. It is also the birthplace of Walmart. Lastly, but not least, it has been
+            named by U.S. News and World Report to be the number one most affordable state in the United States!" </p>
     </aside>
     <footer>
         <p>©2025 🍂 Jessica Hutchins 🍂 Arkansas USA</p>
