--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <head>
+    <header>
         <img src="images/z-downriver.png" alt="Downriver logo">
         <nav>
             <ul>
@@ -22,10 +22,10 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-    </head>
+    </header>
     <main>
         <div class="hero">
-            <img src="images/raft-going-down-whitewater-rapids.jpg" alt="rafting">
+            <img src="images/whitewater-rapids.jpg" alt="rafting">
             <h1>About Us - Down The River</h1>
             <article>
                 <img src="images/happy-customer.jpg" alt="happy rafting customer">
@@ -49,3 +49,5 @@
         </nav>
     </footer>
 </body>
+
+</html>
